# buildpacks-deb-packages

./: .editorconfig  .gitignore  CHANGELOG.md  CONFIGURE_ENV_VAR.md  CONTRIBUTING.md  Cargo.toml  EXTRACT_KEYS.md  INSPECT_PACKAGES.md  ISSUES.md  LOCAL_TEST.md  PACKAGE_CACHE_DAYS.md  PACKAGE_ENV_VARS.md  PACKAGE_INDECES.md  README.md  SPECIAL_CASE_MAP.md  buildpack.toml  project.toml
.github/: CODEOWNERS
.github/workflows/: check_changelog.yml  ci.yml
keys/: ubuntu_22.04.asc
scripts/: download_package_indices.sh  extract_keys.sh  inspect_package.sh  scan_ubuntu_repo.sh
src/: aptfile.rs  create_package_index.rs  debian.rs  determine_packages_to_install.rs  errors.rs  install_packages.rs  main.rs
src/config/: buildpack_config.rs  environment.rs  mod.rs  requested_package.rs
src/debian/: architecture_name.rs  distro.rs  distro_codename.rs  mod.rs  multiarch_name.rs  package_index.rs  package_name.rs  repository_package.rs  repository_uri.rs  source.rs
src/layers/: environment.rs  installed_packages.rs  mod.rs
src/pgp/: cert_helper.rs  mod.rs
tests/: integration_test.rs  rustfmt.toml
tests/fixtures/general_usage/: project.toml
tests/fixtures/project_file_with_empty_config/: project.toml
tests/fixtures/project_file_with_no_config/: project.toml
tests/fixtures/scripts/: postinst
tests/fixtures/unit_tests/: project.toml
