[package]
name = "buildpacks-apt"
edition = "2021"
rust-version = "1.76"

[dependencies]
commons = { git = "https://github.com/heroku/buildpacks-ruby", branch = "main" }
libcnb = "=0.19.0"

[dev-dependencies]
libcnb-test = "=0.19.0"
indoc = "2"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = "warn"
unwrap_used = "warn"
